get request created to get all movies from database
