# src/config/swagger.yaml
@@ -72,3 +72,52 @@ paths:
           description: Unauthorized, invalid credentials
         "500":
           description: Internal server error
+
+  /api/allMovies:
+    get:
+      summary: Retrieve all movies
+      tags:
+        - Movies
+      responses:
+        "200":
+          description: A list of movies
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    title:
+                      type: string
+                    thumbnail:
+                      type: object
+                      properties:
+                        trending:
+                          type: object
+                          properties:
+                            small:
+                              type: string
+                            large:
+                              type: string
+                        regular:
+                          type: object
+                          properties:
+                            small:
+                              type: string
+                            medium:
+                              type: string
+                            large:
+                              type: string
+                    year:
+                      type: integer
+                    category:
+                      type: string
+                    rating:
+                      type: string
+                    isBookmarked:
+                      type: boolean
+                    isTrending:
+                      type: boolean
+                    movieID:
+                      type: string
